Centralise logic to main.js

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 <br>
   <ul id="songList"></ul>
   
-  <script type="module" src="./controllers/filerLogic.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
