Turn playlists into <detail> to collapse/expand playlist content. Add logic to remove song form playlist

--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Music App</h1>
-  <br>
+  <h1>Playlister</h1>
+
+<br>
 <hr>
 <br>
-<h2>Create a Playlist</h2>
+
+<h2>All playlists</h2>
+
+<ul id="playlist-list"></ul>
 <form id="playlist-form">
-  <input type="text" id="playlist-name" placeholder="Playlist name" required />
+  <input type="text" id="playlist-name" placeholder="Create a new playlist" required />
   <button type="submit">Create</button>
 </form>
 
-<ul id="playlist-list"></ul>
-
 <br>
 <hr>
 <br>
+<h2>All songs</h2>
 
   <div class="filter">
     <label for="genreFilter">Genre</label>
