--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
 <hr>
 <br>
 
+<section>
 <h2>All playlists</h2>
-
 <ul id="playlist-list"></ul>
 <form id="playlist-form">
   <input type="text" id="playlist-name" placeholder="Create a new playlist" required />
   <button type="submit">Create</button>
 </form>
+</section>
 
 <br>
 <hr>
 <br>
+
+<section>
+
 <h2>All songs</h2>
 
   <div class="filter">
@@ -42,6 +46,8 @@
 <br>
   <ul id="songList"></ul>
   
+</section>
+
   <script type="module" src="main.js"></script>
 </body>
 </html>
