Begin building brutalist css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Playlister</h1>
+  <h1>Listr♫</h1>
 
 <br>
 <br>
 
 <section>
-<h2>All playlists</h2>
+<h3><mark>All playlists</mark></h3>
+<br>
 <ul id="playlist-list"></ul>
 <form id="playlist-form">
   <input type="text" id="playlist-name" placeholder="Create a new playlist" required />
@@ -27,8 +28,8 @@
 <section>
   <hr>
 
-<h2>All songs</h2>
-
+<h3><mark>All songs</mark></h3>
+<br>
   <div class="filter">
     <label for="genreFilter">Genre</label>
     <select id="genreFilter">
